--- a/aip.tex
+++ b/aip.tex
@@ -1945,7 +1945,7 @@ Indeed, the failure of \Cref{arithmetic uniform value and image: T} to compute f
 We are now prepared to describe our algorithm.
 In what follows, choose $p \gg 0$ as in \Cref{p large m-primary: R}, and fix a universal denominator  $\denom$ for $A$.
 We begin our process by initially defining both $\S_p = \S_p(A,\vv{u})$ and $\S^{\ast}_p = \S^{\ast}_p(A,\vv{u})$ as the singleton set $\S_p=\S_p^{\ast} = \{ (A,\vv{u}) \}$,  and noting that 
-\[ \val \IP_p(A,\vv{u},p) = \ft{A}{\vv{u}}p-\udeficit(A,\vv{u}).\]
+\[ \val \IP_p(A,\vv{u},p) = \ft{A}{\vv{u}}p-\udeficit(A,\vv{u},p).\]
 %$\mathcal{S}_1$ to be the first in the sequence of shortfalls associated to the programs $\IP_p(A,\vv{u},p^e)$.  In other words, set \daniel{Replace $\mathcal{S}_e \mapsto \S_{p^e}$? \\ Consist of pairs?}
 
 We turn our attention to \emph{at least} computing $\val \IP_p(A,\vv{u},p^2)$, and set
@@ -1984,7 +1984,7 @@ On the other hand, if every pair in $\S_{p^2}$ is very small, then \Cref{arithme
 \[ M_1 = \max \{ \ft{A}{\vv{v}}p-\udeficit(A,\vv{v},p) : (A,\vv{v}) \in \S_{p^2}\}. \] 
 Let $\S_{p^2}^{\ast} = \S_{p^2}^{\ast}(A,\vv{u})$ be the subset of $\S_{p^2}$ consisting of all $(A,\vv{v})$ that first maximize $\ft{A}{\vv{v}}$, and amongst these, then minimize $\udeficit(A,\vv{v},p)$.
 By definition, $\S_{p^2}^{\ast}$ depends on $p$ modulo $\denom$, and our choice of $p \gg 0$ guarantees that $\S_{p^2}^{\ast}$ corresponds to the points in $\S_{p^2}$ that achieve $M_1$.
-Therefore, we may write \[ M_1 = \epsilon_{p^2} p - \delta_{p^2}\]  where $\epsilon_{p^2},\delta_{p^2}$ are positive rational numbers that depend on $p$ modulo $\denom$.
+Therefore, we may write \[ M_1 = \epsilon_{p^2} p - \delta_{p^2}\]  where $\epsilon_{p^2}$ and $\delta_{p^2}$ are positive rational numbers that depend on $p$ modulo $\denom$.
 
 Setting $e=1$ in \eqref{m-primary value: e} then shows that 
 %
@@ -1998,50 +1998,56 @@ Turning our attention to \emph{at least} computing $\val \IP_p(A,\vv{u},p^3)$, w
 \begin{align*}
 \S_{p^3} = \S_{p^3}(A,\vv{u}) & \coloneqq \{ (A,\vv{w}):  \vv{w} \in \short \IP_p(A,\vv{u},p^2) \} \\
  & = \bigg\{ (A,\vv{w}): \vv{w} \in \bigcup_{\vv{v} \in \S_{p^2}^{\ast}} \ushort(A,\vv{v},p) \bigg\}. 
- \end{align*}
-%
-Observe that $\S_{p^3}$ depends on the class of $p$ modulo $\denom$, but not on $p$ itself.  Furthermore, \Cref{small pairs from shortfalls: R} tells us that every pair in $\S_{p^3}$ is small.
+\end{align*}
+Observe that $\S_{p^3}$ depends on the class of $p$ modulo $\denom$, but not on $p$ itself.
+Furthermore, \Cref{small pairs from shortfalls: R} tells us that every pair in $\S_{p^3}$ is small.
 
-
-Next, we set $M'_e  \coloneqq \max \{ \val \IP_p(A, \vv{w}, p^e) :  (A,\vv{w}) \in \S_{p^3}\}$ for every $e \geq 1$.  Arguing as above, one can find that%
+Next, we set $M'_e  \coloneqq \max \{ \val \IP_p(A, \vv{w}, p^e) :  (A,\vv{w}) \in \S_{p^3}\}$ for every $e \geq 1$.
+Arguing as above, one can find that
 \begin{equation}
 \label{m-primary value 2: e}
- \val \IP_p(A,\vv{u},p^{e+2}) = \val \IP_p(A,\vv{u},p^2)p^e+ M'_e
- \end{equation}
+ \val \IP_p(A,\vv{u},p^{e+2}) = \val \IP_p(A,\vv{u},p^2)p^e+ M'_e,
+\end{equation}
 % \ft{A}{\vv{u}}p^{e+2} - (\udeficit(A,\vv{u},p)-\epsilon_p)p^{e+1} - \delta_pp^e
 and also that 
 %
 \begin{equation}
 \label{m-primary shortfall 2: e}
-\short \IP_p(A,\vv{u},p^{e+2}) = \cup \short \IP_p(A,\vv{w}, p^e)
+\short \IP_p(A,\vv{u},p^{e+2}) = \bigcup \short \IP_p(A,\vv{w}, p^e),
 \end{equation}
 where the union is over all $(A,\vv{w}) \in \S_{p^3}$ that achieve $M'_e$.
 
-Further arguing as above, we see that if there exists a pair in $\S_{p^3}$ that is not very small, then $M'_e = p^e-1$.  In this case,  \eqref{m-primary value 2: e} and our earlier determination of $\val \IP_p(A,\vv{u},p^2)$ tell us that $\val \IP_p(A,\vv{u},p^{e+2})$ equals
+Further arguing as above, we see that if there exists a pair in $\S_{p^3}$ that is not very small, then $M'_e = p^e-1$.
+In this case, \eqref{m-primary value 2: e} and our earlier determination of $\val \IP_p(A,\vv{u},p^2)$ tell us that $\val \IP_p(A,\vv{u},p^{e+2})$ equals
 %
-\[ \ft{A}{\vv{u}}p^{e+2} - (\udeficit(A,\vv{u},p)-\epsilon_{p^2})p^{e+1} - (\delta_{p^2}-1)p^e -1 \] 
+\[ \ft{A}{\vv{u}}p^{e+2} - (\udeficit(A,\vv{u},p)-\epsilon_{p^2})p^{e+1} - (\delta_{p^2}-1)p^e -1. \] 
 %
 As this formula is valid for all $e \geq 1$, our process terminates in this case.
 
-However, if each pair in $\S_{p^3}$ is very small, then \Cref{arithmetic uniform value and image: T} instead implies that $M'_1 = \max \{ \ft{A}{\vv{w}}p-\udeficit(A,\vv{w},p) : (A,\vv{w}) \in \S_{p^3}\}$.  As above, the subset $\S^{\ast}_{p^3}$ of $\S_{p^3}$ of points that achieve $M'_1$ depends on $p$ modulo $\denom$, and can be explicitly described in a concrete way.  Thus, there exist positive rational numbers $\epsilon_{p^3}, \delta_{p^3}$, depending on $p \bmod \denom$, such that $M'_1 = \epsilon_{p^3} p -\delta_{p^3}$, and setting $e=1$ in \eqref{m-primary value 2: e} then demonstrates that $\val \IP_p(A,\vv{u},p^3)$ equals
+However, if each pair in $\S_{p^3}$ is very small, then \Cref{arithmetic uniform value and image: T} instead implies that $M'_1 = \max \{ \ft{A}{\vv{w}}p-\udeficit(A,\vv{w},p) : (A,\vv{w}) \in \S_{p^3}\}$.
+As above, the subset $\S^{\ast}_{p^3}$ of $\S_{p^3}$ of points that achieve $M'_1$ depends on $p$ modulo $\denom$, and can be explicitly described in a concrete way.
+Thus, there exist positive rational numbers $\epsilon_{p^3}$ and $\delta_{p^3}$, depending on $p$ modulo $\denom$, such that $M'_1 = \epsilon_{p^3} p -\delta_{p^3}$, and setting $e=1$ in \eqref{m-primary value 2: e} then demonstrates that $\val \IP_p(A,\vv{u},p^3)$ equals
 %
 \[ \ft{A}{\vv{u}}p^{3} - (\udeficit(A,\vv{u},p)-\epsilon_{p^2})p^{2} - (\delta_{p^2}- \epsilon_{p^3})p -\delta_{p^3}. \] 
 %
 
 In this situation, we may also set $e=1$ in \eqref{m-primary shortfall 2: e} to see that the next collection of shortfalls may be described as 
 %
-\[\short \IP_p(A,\vv{u},p^3) = \cup_{\vv{w} \in \S_{p^2}^{\ast}} \short \IP_p(A,\vv{w},p) = \cup_{\vv{w} \in \S_{p^3}^{\ast}} \ushort(A,\vv{w},p) \]  
+\[\short \IP_p(A,\vv{u},p^3) = \bigcup_{\vv{w} \in \S_{p^2}^{\ast}} \short \IP_p(A,\vv{w},p) = \bigcup_{\vv{w} \in \S_{p^3}^{\ast}} \ushort(A,\vv{w},p). \]  
 
 Next, in analog with our previous definitions, we set %
 \begin{align*}
-\S_{p^4} = \S_{p^4}(A,\vv{u}) & \coloneqq \{ (A,\vv{z}):  \vv{z} \in \short_p(A,\vv{u},p^3) \} \\
- & = \{ (A,\vv{z}): \vv{z} \in \cup_{\vv{w} \in \S_{p^3}^{\ast}} \ushort(A,\vv{w},p) \} 
- \end{align*}
-%
+\S_{p^4} = \S_{p^4}(A,\vv{u}) & \coloneqq \{ (A,\vv{z}):  \vv{z} \in \short \IP_p(A,\vv{u},p^3) \} \\
+ & = \bigg\{ (A,\vv{z}): \vv{z} \in \bigcup_{\vv{w} \in \S_{p^3}^{\ast}} \ushort(A,\vv{w},p).\bigg\}. 
+\end{align*}
+Like $\S_p,\S_{p^2}$ and $\S_{p^3}$, the set $\S_{p^4}$ consists of small pairs, and depends on $p$ modulo $\denom$, but not on $p$ itself.
+If $\S_{p^4}$ contains a pair that is not very small, then repeating this process, we can compute the value of $\IP_p(A,\vv{u},p^{e+3})$ for all $e \geq 1$.
+Otherwise, we can only compute the value and shortfalls of the next program $\IP_p(A,\vv{u},p^{4})$, and then analogously repeat our arguments.
 
-Like $\S_p,\S_{p^2}$ and $\S_{p^3}$, the set $\S_{p^4}$ consists of small pairs, and depends on $p$ modulo $\denom$, but not on $p$ itself. If $\S_{p^4}$ contains a pair that is not very small, then repeating this process, we can compute the value of $\IP_p(A,\vv{u},p^{e+3})$ for all $e \geq 1$.  Otherwise, we can only compute the value and shortfalls of the next program $\IP_p(A,\vv{u},p^{4})$, and then analogously repeat our arguments.
-
-We may continue iterating these steps.  Note that, when it is necessary to define it, the set $\S_{p^e}$ will consist of small pairs $(A,\vv{v})$, where $\vv{v}$ is in some universal shortfall of an $A$-pair.  It then follows from \Cref{finitely many deltas for a fixed A: R} that all defined $\S_{p^e}$ are subsets of some \emph{finite set} determined by $A$.  Thus, there is an upper bound for the number of possible distinct  $\S_{p^e}$, and as soon as such a set repeats, the process must cycle from that point onward.
+We may continue iterating these steps.
+Note that, when it is necessary to define it, the set $\S_{p^e}$ will consist of small pairs $(A,\vv{v})$, where $\vv{v}$ is in some universal shortfall of an $A$-pair.
+It then follows from \Cref{finitely many deltas for a fixed A: R} that all defined $\S_{p^e}$ are subsets of some \emph{finite set} determined by $A$.
+Thus, there is an upper bound for the number of possible distinct  $\S_{p^e}$, and as soon as such a set repeats, the process must cycle from that point onward.
 
 Finally, we note that it remains to establish the nonpositivity of the non-leading coefficients asserted in \Cref{m-primary AIP: T}, but this follows from  \Cref{non-leading coefficients: L}, and will be covered in our treatment of the general case.
 
