--- a/aip.tex
+++ b/aip.tex
@@ -1753,6 +1753,7 @@ It is clear from these interpretations that a very small pair must also be small
    If we take, say, the example below, and add a row of ones to the matrix, wouldn't this region be unbounded?
    Don't we get infinitely many ``layers'' of black points?
 }
+\daniel[inline]{This does look like a counterexample.  Maybe I meant to say is that as we very over all small, but not very small, pairs $(A,\vv{u})$, there are only finitely many collapsed pairs $(\ol{A}, \ol{\vv{u}})$.  I think this might have been buried in an earlier version.  But, with the current proof of \Cref{small not very small value: T}, I don't think we ever called upon this ``fact".  Maybe we should even point out this example and state that there can be infinitely many pairs that are small and not very small, perhaps right before we state \Cref{small not very small value: T}. }
 \end{remark}
 
 \begin{example}
@@ -1843,6 +1844,7 @@ With these reductions in hand, we now describe how to compute the value of $\IP_
    I modified the statement and proof of the following theorem to isolate the part that depends on $p\gg 0$.
    Original statement and proof were commented out.
 }
+\daniel[inline]{This is better.  In this light, is it true that if $p \gg 0$ relative to $A$ and $(A,\vv{u})$ is small, then $\IP_p(A,\vv{u},p) = \IP(A,\vv{u},p)$ if and only if $(A,\vv{u})$ is very small?}
 \begin{theorem}
    \label{arithmetic uniform value and image: T}
    For every small pair $(A,\vv{u})$, the arithmetic integer program $\IP_p(A, \vv{u}, p)$ agrees with the standard integer program $\IP(A, \vv{u}, p)$.
@@ -1894,7 +1896,7 @@ With these reductions in hand, we now describe how to compute the value of $\IP_
    If $(A, \vv{u})$ is small but not very small, $\IP = \IP(A,\vv{u},p)$ and $\IP_p = \IP_p(A,\vv{u},p)$ need not agree.
    Moreover, the collapses of their shortfalls along the minimal face can also differ.
    For instance, let $A$ be the $2 \times 2$ identity matrix and $\vv{u} = (1,1)$, so that $(A,\vv{u})$ is small, but not very small.
-   For any prime $p$, $\val \IP = 2p - 2$, attained by a unique optimal point, namely $(p-1,p-1)$; thus, $\short \IP = \{(1,1)\}$, which is independent of $p$.
+   For any prime $p$, $\val \IP = 2p - 2$, attained by a unique optimal point, namely $(p-1,p-1)$; thus, $\short \IP = \{(1,1)\}$, which is independent of $p$. \daniel{Should we add ``as guaranteed by \Cref{uniform uniform value and image: T}, at least when $p \gg 0$'' here, since that result does apply to the shortfalls of $\IP$?} \daniel{Should we also say that $\O = \mf(A,\vv{u})$ is bounded in this example, so that collapsing is just the identity?}
    In contrast, for any odd prime $p$, the point $(\frac{p-1}{2}, \frac{p-1}{2})$ is feasible for $\IP_p$, and therefore optimal by \Cref{trivial small value bound: P}.
    Thus, $\val \IP_p = p-1$ and the point $(\frac{p+1}{2}, \frac{p+1}{2})$, which depends strongly on $p$, is an element of $\short \IP_p$.
 
@@ -2319,7 +2321,7 @@ Furthermore, if $\Q_p(A,\vv{u})$ is finite, then
 \begin{proof}
 Fix a monomial matrix $A$, and let $p \gg 0$ so that the conclusions of \Cref{ILL: T,small not very small value: T,arithmetic uniform value and image: T,lem: upper bound for higher mu} are valid.
 
-Set $\Q = \Q_p(A,\vv{u},p)$.  If $e$ is an integer satisfying $1 \leq e \leq \Q$, then $S_{p^e}^{\ast}(A,\vv{u})$ is non-empty, and by construction of $\sprout_p^{\ast}(A,\vv{u})$, there exists a path $(A,\vv{u}) = (A_1, \vv{u}_1) \to s \to (A_e, \vv{u}_e)$ of length $e-1$ in this graph.
+Set $\Q = \Q_p(A,\vv{u},p)$.  If $e$ is an integer satisfying $1 \leq e \leq \Q$, then $S_{p^e}^{\ast}(A,\vv{u})$ is non-empty, and by construction of $\sprout_p^{\ast}(A,\vv{u})$, there exists a path $(A,\vv{u}) = (A_1, \vv{u}_1) \to \cdots \to (A_e, \vv{u}_e)$ of length $e-1$ in this graph.
 
 This path in $\sprout_p^{\ast}(A,\vv{u})$ also defines a path in $\sprout_p(A)$, and so  \Cref{ILL: T} tells us that there exists a finite list of points $\{ \vv{k}_s \}_{s=1}^e$ in the lattice of domain with each $\vv{k}_s \in \opt \IP(A_s, \vv{u}_s, p)$ for which the point $\vv{k} \coloneqq \sum_{s=1}^e \vv{k}_s p^{e-s}$ is feasible for the standard integer program $\IP(A, \vv{u}, p^e)$.  
 
@@ -2440,7 +2442,7 @@ Suppose that $p \gg 0$ so that the conclusions of \Cref{main theorem wrt diagona
 %
 \[ \crit(A,\vv{u})=\ft{A}{\vv{u}} - \sum_{s=1}^{\infty} \frac{\delta_{p^s}(A,\vv{u})-\epsilon_{p^{s+1}}(A,\vv{u})}{p^s}. \] 
 %
-In this case, \Cref{elementary2: R}\eqref{elementary2 periodic in e} implies that the digits $\delta_{p^s}(A,\vv{u})-\epsilon_{p^s}(A,\vv{u})$ are eventually periodic in $s$, which demonstrates that $\crit(A,\vv{u})$ is rational.
+In this case, \Cref{elementary2: R}\eqref{elementary2 periodic in e} implies that the terms $\delta_{p^s}(A,\vv{u})-\epsilon_{p^s}(A,\vv{u})$ are eventually periodic in $s$, which demonstrates that $\crit(A,\vv{u})$ is rational.
 
 On the other hand, when $\Q = \infty$, then \Cref{main theorem wrt diagonal: T} instead implies that
 \begin{align*} 
@@ -2449,10 +2451,11 @@ On the other hand, when $\Q = \infty$, then \Cref{main theorem wrt diagonal: T} 
 \end{align*}
 and so $\crit(A,\vv{u})$ is again rational, with denominator a power of $p$. 
 
-Therefore, if $p \gg 0$ and $(A,\vv{u})$ is associated to some ideal pair $(\ideala, \ideald)$, then 
+Thus, if $p \gg 0$ and $(A,\vv{u})$ is associated to some ideal pair $(\ideala, \ideald)$, then 
 \[ \ft{\ideala}{\ideald} - \crit(\ideala, \ideald) = \ft{A}{\vv{u}}-\crit(A,\vv{u}) = \sum_{s=1}^{\infty} \frac{ \sigma_{p^s}(A,\vv{u})}{p^s} \] 
 where $\{ \sigma_{p^e}(A,\vv{u}) \}_{e=1}^{\infty}$ of nonnegative rational numbers that is eventually periodic, and depends on the pair $(A,\vv{u})$ and on the class of $p$ modulo any universal denominator for $A$, but not on the value of $p$ itself.
 \end{remark}
+
 
 \begin{remark}[Denominators of certain critical exponents]
 \!{To do.  Discuss the situation when $A$ comes from an $\idealm$-primary ideal that is homogeneous under some positive grading.}
@@ -2461,14 +2464,6 @@ where $\{ \sigma_{p^e}(A,\vv{u}) \}_{e=1}^{\infty}$ of nonnegative rational numb
 \daniel[inline]{Summarize what the constant terms are.  Namely, $-\delta_{p^e}(A,\vv{u})$ and $-1$.  This will come up when looking at the roots of the BS-polynomials}
 
 
-\newpage
-
-
-\section{Applications to generic hypersurfaces}
-
-\subsection{Generic hypersurfaces in large characteristics}
-
-\subsection{Generic hypersurfaces in characteristic zero}
 
 
 \newpage
