--- a/aip.tex
+++ b/aip.tex
@@ -2453,7 +2453,7 @@ and so $\crit(A,\vv{u})$ is again rational, with denominator a power of $p$.
 
 Thus, if $p \gg 0$ and $(A,\vv{u})$ is associated to some ideal pair $(\ideala, \ideald)$, then 
 \[ \ft{\ideala}{\ideald} - \crit(\ideala, \ideald) = \ft{A}{\vv{u}}-\crit(A,\vv{u}) = \sum_{s=1}^{\infty} \frac{ \sigma_{p^s}(A,\vv{u})}{p^s} \] 
-where $\{ \sigma_{p^e}(A,\vv{u}) \}_{e=1}^{\infty}$ of nonnegative rational numbers that is eventually periodic, and depends on the pair $(A,\vv{u})$ and on the class of $p$ modulo any universal denominator for $A$, but not on the value of $p$ itself.
+where $\{ \sigma_{p^e}(A,\vv{u}) \}_{e=1}^{\infty}$ is a sequence of nonnegative rational numbers that is eventually periodic, and depends on the pair $(A,\vv{u})$ and on the class of $p$ modulo any universal denominator for $A$, but not on the value of $p$ itself.
 \end{remark}
 
 
@@ -2462,6 +2462,7 @@ where $\{ \sigma_{p^e}(A,\vv{u}) \}_{e=1}^{\infty}$ of nonnegative rational numb
 \end{remark}
 
 \daniel[inline]{Summarize what the constant terms are.  Namely, $-\delta_{p^e}(A,\vv{u})$ and $-1$.  This will come up when looking at the roots of the BS-polynomials}
+
 
 
 
